# training_tracker

./: .gitignore  .pre-commit-config.yaml  app.py  config_test.py  models.py  pyproject.toml  schemas.py
migrations/: env.py
migrations/versions/: 0287e41d5bfa_.py  100a58518334_.py  3417abd7e494_add_user_model.py  5f910644246f_initial.py  d3f56bea2c78_.py  d95caa8d1060_.py  e8c9ef9327b5_.py
services/: auth.py
tests/: test_first_attempt.py
views/: auth.py  distances.py  exercises.py  groups.py  sets.py  trainings.py  weights.py
