[tool.poetry]
name = "training_tracker"
version = "0.1.0"
description = ""
authors = ["Maryia Afanasyeva <Maryia.Afanasyeva@itechart-group.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.1"
flask-marshmallow = "^0.14.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
python-dotenv = "^0.20.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"